[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/designer_slot_widget.gd" id="1_script"]

[node name="DesignerSlotWidget" type="PanelContainer"]
custom_minimum_size = Vector2(120, 120)
offset_right = 120.0
offset_bottom = 120.0
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
theme_override_font_sizes/font_size = 9
text = "SLOT 1: WEAPON"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.333333, 0.333333, 0.333333, 1)
theme_override_font_sizes/font_size = 11
text = "EMPTY"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="IconLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.333333, 0.333333, 0.333333, 1)
theme_override_font_sizes/font_size = 24
text = "‚õù"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "Change..."
popup/item_0/id = 0

[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
